# Frequent-Substring-Trees

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/: benchmark.py  dbtext_analysis.py  preprocessing.py
lib/fsst/: fsst.cpp  fsst_avx512.cpp  libfsst.cpp  libfsst.hpp  libfsst12.hpp
lib/fsst/paper/dbtext/: city  email  faust  firstname
src/: fst.cpp
src/classes/: fst.cpp  fst.h  node.cpp  node.h
src/fsst/: fsst.cpp  fsst.h  libfsst.cpp
src/helpers/: string_helpers.cpp  string_helpers.h
src/tests/: main_test.cpp
src/tests/classes/: fst_test.cpp  node_test.cpp
src/tests/doctest/: doctest.h
src/tests/helpers/: string_helpers_test.cpp
